--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "preact": "^8.2.7",
     "preact-compat": "^3.18.0",
     "preact-redux": "^2.0.3",
+    "react": "^16.3.2",
+    "react-debounce-input": "^3.2.0",
     "react-plotly.js": "^2.1.0",
     "react-table": "^6.8.2",
     "redux": "^3.7.2"
