--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.3.2",
     "react-debounce-input": "^3.2.0",
     "react-plotly.js": "^2.1.0",
+    "react-split-pane": "^0.1.77",
     "react-table": "^6.8.2",
     "redux": "^3.7.2"
   },
